<?xml version="1.0"?>
<package format="2">
  <name>iiwa_ros</name>
  <version>1.4.0</version>
  <description>The iiwa_ros package</description>
  <author email="jpitma1@umd.edu">Jerry Pittman, Jr.</author>
  <maintainer email="jpitma1@umd.edu">Jerry Pittman, Jr.</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>iiwa_msgs</depend>
  
</package>
