<?xml version="1.0"?>
<package format="2">
  <name>proj_2</name>
  <version>1.0.0</version>
  <description>Proj 2 package for controlling Kuka in Gazebo</description>
  <author email="jpitma1@umd.edu">Jerry Pittman, Jr.</author>
  <maintainer email="jpitma1@umd.edu">Jerry Pittman, Jr.</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>
  <depend>rviz</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>  
  <depend>joint_state_publisher_gui</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
    <architecture_independent />
  </export>
  
</package>
